--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,20 @@
-.App {
-  text-align: center;
+html,
+body,
+#root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Main app container */
+.app-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Main content area pushes footer down */
+.app-content {
+  flex: 1;
 }
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -23,11 +25,6 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +32,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+.App {
+  font-family: sans-serif;
+  text-align: center;
+}
+.App-logo {
+  height: 200px;
+  filter: drop-shadow(0 0 0.75rem rgb(255, 217, 0));
 }
